Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 <li>Sugar.Web: Handy helpers when dealing with domain names and URLs.</li>
 </ul>
 
+<p><a href="https://ci.appveyor.com/project/bounav/sugar/branch/master"><img src="https://ci.appveyor.com/api/projects/status/py4kl09udd0t7egy/branch/master?svg=true" alt="Build status"></a></p>
+
 <h2>
 <a id="overview" class="anchor" href="#overview" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Overview</h2>
 
